src/objects/Credit_Card_Declined_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Create_ARR_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create ARR Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_customer_after_Days__c</fullName>
        <label>Notify customer after Day(s)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Email_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email To Customer</label>
        <type>Checkbox</type>
    </fields>
    <label>Credit Card Declined Config</label>
    <listViews>
        <fullName>All_Settings</fullName>
        <columns>NAME</columns>
        <columns>Create_ARR_Task__c</columns>
        <columns>Send_Email_To_Customer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Settings</label>
    </listViews>
</CustomObject>